# illuminate

./: .gitignore  README.md  agents.py  play.ipynb  play.py  pyproject.toml  tools.py
illuminate/: cli.py  tools.py
illuminate/agents/: agent.py  worker_agents.py
samples/: cleanup.py
samples/indian_traffic/: prompt.txt
samples/womens_shoes/: prompt.txt
src/illuminate/: cli.py  hello.py  tools.py  util.py
src/illuminate/agents/: agent.py  agent_system.py  planning_agent.py  review_agent.py  worker_agents.py
src/illuminate/tools/: base.py  file_tools.py  ipynb_tools.py  python_tools.py  tools.py
