[project]
name = "illuminate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "openai>=1.70.0",
    "pydantic>=2.11.2",
]

[project.scripts]
illuminate = "illuminate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}